# serializer version: 1
# name: test_all_binary_sensor_entities.6
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.7
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.8
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter Cleaning Required',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter Cleaning Required',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_cleaning',
    'unique_id': '56789_filter_cleaning',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Test VMC Filter Cleaning Required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_master_on_or_satellite_off_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_vmc_master_on_or_satellite_off_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Master (on) or Satellite (off) unit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Master (on) or Satellite (off) unit',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'master_satellite',
    'unique_id': '56789_master_satellite',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_master_on_or_satellite_off_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test VMC Master (on) or Satellite (off) unit',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_master_on_or_satellite_off_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_winter_on_or_summer_off_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_vmc_winter_on_or_summer_off_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Winter (on) or Summer (off) mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter (on) or Summer (off) mode',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'winter_summer',
    'unique_id': '56789_winter_summer',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_winter_on_or_summer_off_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test VMC Winter (on) or Summer (off) mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_winter_on_or_summer_off_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
